# Parallel-Banding-Algorithm-plus

pba-plus-2D/: CMakeLists.txt  main.cpp
pba-plus-2D/pba/: pba2DHost.cu  pba2DKernel.h
